--- a/resources/css/css.css
+++ b/resources/css/css.css
@@ -98,7 +98,7 @@ input:checked + .slider:before {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #87CEFA;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -109,7 +109,7 @@ input:checked + .slider:before {
   cursor: pointer;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
+  background: #C0C0C0;
 }
 .form .message {
   margin: 15px 0 0;
@@ -158,10 +158,10 @@ input:checked + .slider:before {
 }
 body {
   background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
+  background: -webkit-linear-gradient(right, ##FFFFFF, ##FFFFFF);
+  background: -moz-linear-gradient(right, ##FFFFFF, ##FFFFFF);
+  background: -o-linear-gradient(right, ##FFFFFF, ##FFFFFF);
+  background: linear-gradient(to left, ##FFFFFF, ##FFFFFF);
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
