--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     position: relative;
     font-family: 'Open Sans', sans-serif;
     width: 100%;
-    height: 180px;
+    height: 250px;
 }
 
 #header div h3 {
@@ -70,6 +70,21 @@ body {
 
 .section-center {
     text-align: center;
+}
+
+table {
+    padding-left: 25%;
+}
+
+#appearance-select{
+   -webkit-appearance: none;  /* Remove estilo padrão do Chrome */
+   -moz-appearance: none; /* Remove estilo padrão do FireFox */
+   appearance: none; /* Remove estilo padrão do FireFox*/
+   background: url(http://www.webcis.com.br/images/imagens-noticias/select/ico-seta-appearance.gif) no-repeat #eeeeee;  /* Imagem de fundo (Seta) */
+   background-position: 218px center;  /*Posição da imagem do background*/
+   width: 250px; /* Tamanho do select, maior que o tamanho da div "div-select" */
+   height:30px; /* Altura do select, importante para que tenha a mesma altura em todo os navegadores */
+   border:1px solid #ddd;
 }
 
 #footer {
